# data2day-2022

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: code-quality.yml
data2day_2022/helpers/: __init__.py  utils.py
data2day_2022/sql/: extract_precipitation_2018.sql  find_stations_close_to.sql
datasets/: customer_frequentation.csv  weather_prpc.csv
notebooks/: forecast_customer_frequentation_v1.ipynb  weather_data_on_bigquery.ipynb
results/: map_weather_stations_stuttgart.html  weather_prcp.csv
